--- a/package.json
+++ b/package.json
@@ -1,29 +1,36 @@
 {
   "name": "lambda-ecs-fargate-updownstatus",
-  "version": "1.0.0",
   "description": "A set of lambda functions using AWS SDK for JavaScript V3 to adjust the desired capacity and see the status of an ECS Fargate cluster ( for Valheim initially )",
-  "main": "index.js",
-  "repository": "",
   "author": "dave_b93",
   "license": "MIT",
-  "scripts": {
-    "build:backend": "webpack build ./src/startstopserver.ts --mode development --target node --devtool eval -o ./src/startstop",
-    "build:backendstatus": "webpack build ./src/serverstatus.ts --mode development --target node --devtool eval -o ./src/serverstatus",
-    "test": "exit 0"
+  "version": "0.1.0",
+  "bin": {
+    "lambda-ecs-fargate-updownstatus": "bin/lambda-ecs-fargate-updownstatus.js"
   },
-  "dependencies": {
-    "@aws-sdk/client-cognito-identity": "^1.0.0-gamma.1",
-    "@aws-sdk/client-ec2": "^3.8.0",
-    "@aws-sdk/client-ecs": "^3.8.0",
-    "@aws-sdk/client-iam": "^1.0.0-gamma.2",
-    "@aws-sdk/client-lambda": "^1.0.0-gamma.2",
-    "@aws-sdk/client-s3": "^1.0.0-gamma.1",
-    "@aws-sdk/credential-provider-cognito-identity": "^1.0.0-gamma.2"
+  "scripts": {
+    "build": "tsc",
+    "watch": "tsc -w",
+    "test": "jest",
+    "cdk": "cdk"
   },
   "devDependencies": {
-    "@types/node": "^14.0.23",
-    "typescript": "^4.0.2",
-    "webpack": "^5.24.3",
-    "webpack-cli": "^4.5.0"
+    "@aws-cdk/assert": "1.93.0",
+    "@types/jest": "^26.0.10",
+    "@types/node": "10.17.27",
+    "jest": "^26.4.2",
+    "ts-jest": "^26.2.0",
+    "aws-cdk": "1.93.0",
+    "ts-node": "^9.0.0",
+    "typescript": "~3.9.7"
+  },
+  "dependencies": {
+    "@aws-cdk/aws-apigateway": "^1.93.0",
+    "@aws-cdk/aws-ecs": "^1.93.0",
+    "@aws-cdk/aws-lambda": "^1.93.0",
+    "@aws-cdk/aws-lambda-nodejs": "^1.93.0",
+    "@aws-cdk/core": "^1.93.0",
+    "@aws-sdk/client-ec2": "^3.8.1",
+    "@aws-sdk/client-ecs": "^3.8.1",
+    "source-map-support": "^0.5.16"
   }
 }
